--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "npm run jest --watch"
   },
   "dependencies": {
     "next": "11.1.2",
@@ -14,9 +15,18 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
     "@types/react": "17.0.30",
+    "babel-jest": "^27.4.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "jest": "^27.4.7",
+    "msw": "^0.36.4",
+    "next-page-tester": "^0.30.0",
     "typescript": "4.4.4"
   }
 }
